--- a/my-app/.eslintrc.json
+++ b/my-app/.eslintrc.json
@@ -11,11 +11,6 @@
     "react-hooks/exhaustive-deps": "warn",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": "warn",
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
+    "prettier/prettier": ["error", { "endOfLine": "auto" }]
   }
 }
