--- a/my-app/.eslintrc.json
+++ b/my-app/.eslintrc.json
@@ -1,16 +1,10 @@
 {
-  "extends": [
-    "react-app",
-    "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
-  ],
-  "plugins": ["react-hooks"],
+  "extends": ["eslint:recommended", "prettier"],
+  "plugins": ["@typescript-eslint"],
   "rules": {
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "no-console": "off",
+    "no-unused-vars": "warn",
     "@typescript-eslint/explicit-function-return-type": "off",
-    "@typescript-eslint/no-unused-vars": "warn",
-    "prettier/prettier": ["error", { "endOfLine": "auto" }]
+    "@typescript-eslint/no-explicit-any": "off"
   }
 }
