--- a/my-app/.eslintrc.json
+++ b/my-app/.eslintrc.json
@@ -2,8 +2,8 @@
   "extends": ["eslint:recommended", "prettier"],
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "no-console": "off",
-    "no-unused-vars": "warn",
+    "no-console": 1,
+    "no-unused-vars": "error",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-explicit-any": "off"
   }
